; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/extr_udivmodsi4.c_udivmodsi4.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/extr_udivmodsi4.c_udivmodsi4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @udivmodsi4(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i64 1, i64* %8, align 8
  store i64 0, i64* %9, align 8
  br label %10

10:                                               ; preds = %24, %3
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* %5, align 8
  %13 = icmp ult i64 %11, %12
  br i1 %13, label %14, label %22

14:                                               ; preds = %10
  %15 = load i64, i64* %8, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i64, i64* %6, align 8
  %19 = and i64 %18, 2147483648
  %20 = icmp ne i64 %19, 0
  %21 = xor i1 %20, true
  br label %22

22:                                               ; preds = %17, %14, %10
  %23 = phi i1 [ false, %14 ], [ false, %10 ], [ %21, %17 ]
  br i1 %23, label %24, label %29

24:                                               ; preds = %22
  %25 = load i64, i64* %6, align 8
  %26 = shl i64 %25, 1
  store i64 %26, i64* %6, align 8
  %27 = load i64, i64* %8, align 8
  %28 = shl i64 %27, 1
  store i64 %28, i64* %8, align 8
  br label %10

29:                                               ; preds = %22
  br label %30

30:                                               ; preds = %44, %29
  %31 = load i64, i64* %8, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %49

33:                                               ; preds = %30
  %34 = load i64, i64* %5, align 8
  %35 = load i64, i64* %6, align 8
  %36 = icmp uge i64 %34, %35
  br i1 %36, label %37, label %44

37:                                               ; preds = %33
  %38 = load i64, i64* %6, align 8
  %39 = load i64, i64* %5, align 8
  %40 = sub i64 %39, %38
  store i64 %40, i64* %5, align 8
  %41 = load i64, i64* %8, align 8
  %42 = load i64, i64* %9, align 8
  %43 = or i64 %42, %41
  store i64 %43, i64* %9, align 8
  br label %44

44:                                               ; preds = %37, %33
  %45 = load i64, i64* %8, align 8
  %46 = lshr i64 %45, 1
  store i64 %46, i64* %8, align 8
  %47 = load i64, i64* %6, align 8
  %48 = lshr i64 %47, 1
  store i64 %48, i64* %6, align 8
  br label %30

49:                                               ; preds = %30
  %50 = load i32, i32* %7, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %54

52:                                               ; preds = %49
  %53 = load i64, i64* %5, align 8
  store i64 %53, i64* %4, align 8
  br label %56

54:                                               ; preds = %49
  %55 = load i64, i64* %9, align 8
  store i64 %55, i64* %4, align 8
  br label %56

56:                                               ; preds = %54, %52
  %57 = load i64, i64* %4, align 8
  ret i64 %57
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
